数据库迁移完成

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# DATABASE_URL=file:F:/DB/SQLite3/credential.db
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# DATABASE_URL=mysql://credentials_db_admin:fjdl3a&)fdj4_6&$_@192.168.3.20:3306/credentials_db
 
-DATABASE_URL=file:F:/DB/SQLite3/credential.db
+DATABASE_URL=mysql://admin:jfFJ6su_w3(Fds!@192.168.3.20:3306/credentials_db
+
+KEY_PATH=F:\密钥\.env
 
